# Baddie-Ai-journal-hustle

./: .dockerignore  .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .vercelignore  =2.3.0  CONFLICTS_RESOLUTION_COMPLETE.md  CONFLICTS_RESOLVED.md  CONFLICT_RESOLUTION_COMPLETE.md  CONFLICT_RESOLUTION_REPORT.md  CONFLICT_VERIFICATION_REPORT.md  CONTRIBUTING.md  CREATE_NEW_REPOSITORY_GUIDE.md  DEPLOY.md  DEPLOYMENT_FIX_502.md  DEPLOYMENT_LOGGING_FIX.md  DEPLOYMENT_POLICY.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_TIMELINE_SUMMARY.md  DOMAIN-SETUP.md  Dockerfile  ISSUE_NOTE.md  LANDING_PAGE.md  LANDING_PAGE_SUMMARY.txt  LAUNCH_CHECKLIST.md  LICENSE  PREVIEW.md  PR_REVIEW_COMMENT.md  PR_REVIEW_FEEDBACK.md  PULL_REQUESTS_COMPLETED.md  Procfile  QUICKSTART_API_SETUP.md  QUICK_DEBUG_GUIDE.md  QUICK_DEPLOYMENT_PATH.md  README.md  README_old.md  RESOLUTION_SUMMARY.md  (+36 more)
.github/: CONTRIBUTOR_COPILOT_ONBOARDING.md  COPILOT_AGENT_CUSTOMIZATION.md  COPILOT_AGENT_MANUAL_VALIDATION.md  COPILOT_AGENT_ONBOARDING.md  copilot-instructions.md  pull_request_template.md
api/: index.py
baddie_journal/: __init__.py  app.py  cli.py  insights.py  journal_cli.py  models.py  storage.py  swarms_integration.py  thrift_swarms.py
docs/: contributing.md  copilot-best-practices.md  copilot-setup.md  privacy.md  referrals.md  user-guide.md
issues/: 1.md  10.md  11.md  5.md  7.md
pages/: _app.js  index.js
templates/: base.html  entries.html  error.html  index.html  insights.html  landing.html  new_entry.html  profile.html  thrift_index.html  thrift_result.html
(+21 files in other folders)
