[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baddie-ai-journal-hustle"
version = "0.1.0"
description = "AI-powered journal with insights and analytics"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "lovetrulymichelle-tech", email = "contact@example.com"}
]
dependencies = [
    "flask>=2.3.0",
    "sqlalchemy>=2.0.0",
    "pandas>=1.5.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["baddie_journal*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=baddie_journal --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true